# QuantLoom

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
config/: rules.yaml  settings.py
docs/: completion-report.md  development-plan.md  doc.md  frontend-product-design.md  install.md  quant_loom.md  scoring-report.md  system-architecture-report.md
frontend/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/public/: config.js  manifest.json  sw.js
frontend/src/: App.vue  env.d.ts  main.ts
quant_loom/: __init__.py
quant_loom/ai_analyzer/: llm_client.py  rag_store.py
quant_loom/api/: __init__.py  app.py  app.py.bak
quant_loom/data_ingestion/: akshare_fetcher.py  block_trade_fetcher.py  cleaner.py  event_fetcher.py  finance_fetcher.py  lhb_fetcher.py  north_flow_fetcher.py  sector_rotation.py  xtick_fetcher.py
quant_loom/feature_engineering/: event_matcher.py  factor_eval.py  factors.py  fund_flow.py  market_breadth.py  (+4 more)
scripts/: __init__.py  init_db.py  init_db.sql  package.bat  package.sh  run_api.py  run_backtest.py  run_celery_beat.py  run_celery_worker.py  run_scanner.py  run_scanner_top0.py  run_tuning.py  start_beat.sh  start_worker.sh
tests/: test_api.py  test_backtest.py  test_cleaner.py  test_dedup.py  test_email.py  test_event_fetcher.py  test_event_matcher.py  test_factors.py  test_feedback.py  test_fund_flow.py  test_lhb.py  test_market_breadth.py  test_metrics.py  test_north_flow.py  test_price.py  test_rag_store.py  test_retry.py  test_risk.py  test_rule_engine.py  test_scanner.py  test_stop_loss.py  test_tasks.py  test_technical.py  test_tuning.py  test_webhook.py
(+65 files in other folders)
